2020-07-11  Franz Holzinger  <franz@ttproducts.de>
    * new feature for TYPO3 9.5: Add a SQL Query Logger and its FileWriter class which also supports the debug method.

2020-02-23  Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 9.5: Wrong class name Typo3DbLegacyDatabaseConnection. Use Typo3DbLegacyConnection instead.

2020-02-20  Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 8.7: The old style TYPO3_DB based functions did not get debugged.

2020-01-25  Franz Holzinger  <franz@ttproducts.de>
    * new feature: debug output for Doctrine method executeQuery

2020-01-24  Franz Holzinger  <franz@ttproducts.de>

    * new feature: support for Doctrine

2020-01-03  Franz Holzinger  <franz@ttproducts.de>

    * bugfix: the initialization must be done in the method initialize and not in the constructor __construct.

################################################################    

26-08-19 Franz Holzinger <franz@ttproducts.de>
    * adaptions according to the coding guidelines

24-08-19 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 9.5 in combination with the extension typo3db_legacy.

24-01-19 Franz Holzinger <franz@ttproducts.de>
    * bugfix error message: Invalid database result detected: function TYPO3\CMS\Core\Database\DatabaseConnection->sql_free_result 

18-01-19 Franz Holzinger <franz@ttproducts.de>
    * do not debug direct SQL queries about the SESSION
    * change the constants TRUE, FALSE and NULL into lower case

17-09-08 Franz Holzinger <franz@ttproducts.de>
    * add a composer.json file
    * support for TYPO3 8.7

16-06-30 Franz Holzinger <franz@ttproducts.de>
	* works also under TYPO3 7.x and PHP 7.x
	* fix bug: add a check for valid $uidIndexField in exec_SELECTgetRows

15-10-21 Franz Holzinger <franz@ttproducts.de>
	* fix bug with not debugged error case when no alias table name has been used
	* TYPO3 6.2 uses the method query($query) instead of $this->link->query($query)