@@ -2,9 +2,9 @@
 
 $EM_CONF[$_EXTKEY] = array(
     'title' => 'Debug Mysql or other DB',
-    'description' => 'Extends \\TYPO3\\CMS\\Core\\Database\\DatabaseConnection (former t3lib_db) and \\TYPO3\\CMS\\Core\\Database\\Connection to show Errors and Debug-Messages. Useful for viewing and debugging of sql-queries. Shows error messages if they occur.',
+    'description' => 'Extends \\TYPO3\\CMS\\Core\\Database\\DatabaseConnection and \\TYPO3\\CMS\\Core\\Database\\Connection to show Errors and Debug-Messages. Debugging of sql-queries by debug and FileWriter.',
     'category' => 'misc',
-    'version' => '0.9.0',
+    'version' => '0.9.1',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
